# rapidbyte

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md
.githooks/: pre-push
.github/workflows/: bench-pr.yml  ci.yml  codex-review.yml
benchmarks/: Cargo.toml
benchmarks/baselines/main/: pr.jsonl
benchmarks/environments/: local-bench-distributed-postgres.yaml  local-dev-postgres.yaml
benchmarks/scenarios/: README.md
benchmarks/scenarios/lab/: partitioned_scan.yaml  pg_dest_copy.yaml  pg_dest_insert.yaml
benchmarks/scenarios/pr/: README.md  smoke.yaml
benchmarks/src/: artifact.rs  cli.rs  compare.rs  environment.rs  isolation.rs  main.rs  metrics.rs  output.rs  pipeline.rs  runner.rs  scenario.rs  summary.rs  workload.rs
benchmarks/src/adapters/: destination.rs  mod.rs  source.rs  transform.rs
connectors/dest-postgres/: build.rs
connectors/dest-postgres/src/: client.rs  decode.rs  insert.rs  main.rs  pg_error.rs  type_map.rs  watermark.rs  writer.rs
connectors/source-postgres/src/: config.rs  main.rs  metrics.rs  reader.rs
connectors/transform-validate/src/: config.rs  main.rs  transform.rs
crates/rapidbyte-agent/: Cargo.toml  build.rs
crates/rapidbyte-agent/src/: executor.rs  flight.rs  lib.rs  progress.rs  proto.rs  spool.rs  ticket.rs  worker.rs
crates/rapidbyte-cli/: Cargo.toml
crates/rapidbyte-cli/src/: logging.rs  main.rs
crates/rapidbyte-cli/src/commands/: agent.rs  check.rs  connectors.rs  controller.rs  dev.rs  discover.rs  distributed_run.rs  list_runs.rs  mod.rs  run.rs  scaffold.rs  status.rs  transport.rs  watch.rs
crates/rapidbyte-cli/src/output/: format.rs  mod.rs  progress.rs  summary.rs
crates/rapidbyte-cli/tests/: distributed.rs
crates/rapidbyte-controller/: Cargo.toml  build.rs
crates/rapidbyte-controller/src/: agent_service.rs  lease.rs  lib.rs  middleware.rs  pipeline_service.rs  preview.rs  proto.rs  registry.rs  run_state.rs  scheduler.rs  server.rs  state.rs  watcher.rs
crates/rapidbyte-controller/src/store/: mod.rs
crates/rapidbyte-controller/src/store/migrations/: 0001_controller_metadata.sql
crates/rapidbyte-dev/: Cargo.toml
crates/rapidbyte-dev/src/: completer.rs  display.rs  highlighter.rs  lib.rs  repl.rs  workspace.rs
crates/rapidbyte-dev/src/commands/: mod.rs
crates/rapidbyte-engine/: Cargo.toml
crates/rapidbyte-engine/src/: autotune.rs  checkpoint.rs  dlq.rs  error.rs  lib.rs  orchestrator.rs  progress.rs  resolve.rs  result.rs  runner.rs
crates/rapidbyte-engine/src/config/: types.rs  validator.rs
crates/rapidbyte-engine/tests/: pipeline_integration.rs  resolve_visibility.rs
crates/rapidbyte-runtime/src/: bindings.rs  compression.rs  connector.rs  frame.rs  host_state.rs  lib.rs  plugin.rs  sandbox.rs  socket.rs
crates/rapidbyte-sdk/: Cargo.toml
crates/rapidbyte-sdk/macros/src/: connector.rs  lib.rs  plugin.rs
crates/rapidbyte-sdk/src/: build.rs  conformance.rs  connector.rs  context.rs  features.rs  frame_writer.rs  host_ffi.rs  host_tcp.rs  lib.rs  plugin.rs  prelude.rs
crates/rapidbyte-sdk/src/arrow/: ipc.rs  mod.rs
crates/rapidbyte-state/benches/: state_backend.rs
crates/rapidbyte-state/src/: error.rs  postgres.rs  sqlite.rs
crates/rapidbyte-types/src/: checkpoint.rs  cursor.rs  error.rs  format.rs  lib.rs  manifest.rs  state.rs  stream.rs  wire.rs
docs/: ARCHITECTUREv2.md  BENCHMARKING.md  BUILD.md  CODING_STYLE.md  CONNECTOR_DEV.md  DRAFT.md  PLUGIN_ARCHITECTURE.md  PLUGIN_DEV.md  PROTOCOL.md
docs/plans/: 2026-02-28-connector-v4-api-design.md  2026-02-28-connector-v4-implementation-plan.md  2026-03-01-connector-coding-style-conformance.md  2026-03-01-crates-coding-style-conformance.md  2026-03-01-transform-validate-refactor-design.md  2026-03-01-transform-validate-refactor-implementation.md  2026-03-07-cli-output-plan.md  2026-03-07-connector-to-plugin-rename-design.md  2026-03-07-dev-shell-design.md  2026-03-07-dev-shell-plan.md  2026-03-08-feature-contracts-design.md  2026-03-08-feature-contracts-plan.md  2026-03-08-partitioned-read-feature-design.md  2026-03-10-benchmark-adapters-e2e-plan.md  2026-03-10-benchmark-summary-plan.md  2026-03-10-manual-benchmark-ci-plan.md  2026-03-10-pre-commit-quality-hooks-design.md  2026-03-10-pre-commit-quality-hooks-plan.md  2026-03-11-benchmark-env-lifecycle-design.md  2026-03-11-benchmark-validation-refactor-design.md  2026-03-11-benchmark-validation-refactor.md  2026-03-11-dev-shell-ux-cleanup-design.md  2026-03-11-dev-shell-ux-cleanup-plan.md  2026-03-11-isolated-benchmark-stack-design.md  2026-03-11-plugin-refactor-design.md  2026-03-11-plugin-surface-cleanup-design.md  2026-03-11-repo-wide-cleanup-design.md  2026-03-11-repo-wide-cleanup-plan.md  2026-03-11-transform-sql-stream-names-design.md  2026-03-11-transform-sql-stream-names-plan.md  2026-03-12-bench-lab-scenario-env-resolution-design.md  2026-03-12-bench-lab-scenario-env-resolution-plan.md  2026-03-12-cancelled-task-state-design.md  2026-03-12-cancelled-task-state-plan.md  2026-03-12-controller-agent-auth-cancellation-design.md  2026-03-12-controller-agent-auth-cancellation-plan.md  2026-03-12-controller-flag-logging-fix-design.md  2026-03-12-controller-flag-logging-fix-plan.md  2026-03-12-distributed-agent-preview-runtime-design.md  2026-03-12-distributed-agent-preview-runtime-plan.md  (+14 more)
docs/superpowers/plans/: 2026-03-12-controller-agent-v1.1.md
docs/superpowers/specs/: 2026-03-12-controller-agent-v1.1-design.md
examples/no-docker/: POSTGRESQL.md  README.md  RUNNING-SEED-DEV.md  RUST-CARGO-INSTALL.md  WHAT-IS-RAPIDBYTE-DAD.txt
plugins/transforms/sql/: Cargo.toml
plugins/transforms/sql/src/: config.rs  main.rs  references.rs  transform.rs
proto/rapidbyte/v1/: controller.proto
scripts/: bench-env-up.sh  build-plugin.sh  check-no-scaffold-stubs.sh  install-git-hooks.sh  seed-dev.sh  seed-nodocker-dev.sh
tests/: test_plugin_build_resilience.sh
tests/bench/: analyze.py
tests/e2e/: Cargo.toml
tests/e2e/src/harness/: mod.rs  plugins.rs
tests/e2e/tests/: smoke.rs  transform.rs
tests/hooks/: pre_push.sh
(+35 files in other folders)
