[workspace]
resolver = "2"
members = [
    "benchmarks",
    "crates/rapidbyte-agent",
    "crates/rapidbyte-cli",
    "crates/rapidbyte-controller",
    "crates/rapidbyte-dev",
    "crates/rapidbyte-engine",
    "crates/rapidbyte-runtime",
    "crates/rapidbyte-sdk",
    "crates/rapidbyte-sdk/macros",
    "crates/rapidbyte-state",
    "crates/rapidbyte-types",
]
# Plugins target wasm32-wasip2 — build separately
exclude = [
    "plugins/sources/postgres",
    "plugins/destinations/postgres",
    "plugins/transforms/sql",
    "plugins/transforms/validate",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"
description = "Data pipeline engine using WASI component plugins"

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
arrow = { version = "53", features = ["ipc"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
criterion = { version = "0.5", features = ["html_reports"] }
postgres = "0.19"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
indicatif = "0.17"
console = "0.15"
datafusion = "43"
reedline = "0.38"
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"
tonic-build = "0.12"
protoc-bin-vendored = "3"
arrow-flight = { version = "53", features = ["tls"] }
uuid = { version = "1", features = ["v4", "serde"] }
hmac = "0.12"
sha2 = "0.10"
bytes = "1"
tower = { version = "0.5", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net", "sync"] }
tokio-util = { version = "0.7", features = ["rt"] }
async-trait = "0.1"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
