[package]
name = "rapidbyte-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
postgres.workspace = true
rapidbyte-types = { path = "../crates/rapidbyte-types" }
rapidbyte-engine = { path = "../crates/rapidbyte-engine" }
rapidbyte-runtime = { path = "../crates/rapidbyte-runtime" }
rapidbyte-state = { path = "../crates/rapidbyte-state" }
tokio.workspace = true
arrow.workspace = true
bytes = "1"
sha2 = "0.10"
