[package]
name = "rapidbyte-agent"
version.workspace = true
edition.workspace = true

[dependencies]
rapidbyte-types = { path = "../rapidbyte-types" }
rapidbyte-engine = { path = "../rapidbyte-engine" }
rapidbyte-runtime = { path = "../rapidbyte-runtime" }
rapidbyte-state = { path = "../rapidbyte-state", features = ["postgres"] }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
arrow = { workspace = true }
arrow-flight = { workspace = true }
bytes = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
