[package]
name = "rapidbyte-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rapidbyte"
path = "src/main.rs"

[dependencies]
rapidbyte-engine = { path = "../rapidbyte-engine" }
rapidbyte-runtime = { path = "../rapidbyte-runtime" }
rapidbyte-types = { path = "../rapidbyte-types" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
arrow = { version = "53", features = ["prettyprint"] }
libc = "0.2"
indicatif = { workspace = true }
console = { workspace = true }
