[package]
name = "rapidbyte-controller"
version.workspace = true
edition.workspace = true

[dependencies]
rapidbyte-types = { path = "../rapidbyte-types" }
rapidbyte-engine = { path = "../rapidbyte-engine" }
serde = { workspace = true }
serde_yaml = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
bytes = { workspace = true }
tokio-stream = { workspace = true }
tower = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
protoc-bin-vendored = { workspace = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
