[package]
name = "rapidbyte-dev"
version.workspace = true
edition.workspace = true

[dependencies]
rapidbyte-engine = { path = "../rapidbyte-engine" }
rapidbyte-runtime = { path = "../rapidbyte-runtime" }
rapidbyte-types = { path = "../rapidbyte-types" }
rapidbyte-state = { path = "../rapidbyte-state" }
tokio = { workspace = true }
arrow = { workspace = true, features = ["prettyprint"] }
datafusion = { workspace = true }
reedline = { workspace = true }
nu-ansi-term = "0.50"
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
