[package]
name = "rapidbyte-engine"
version.workspace = true
edition.workspace = true

[dependencies]
rapidbyte-types = { path = "../rapidbyte-types" }
rapidbyte-runtime = { path = "../rapidbyte-runtime" }
rapidbyte-state = { path = "../rapidbyte-state", features = ["postgres"] }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
arrow = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = "1"
jsonschema = "0.28"

[dev-dependencies]
bytes = "1"
tempfile = "3"
criterion = { workspace = true }
proptest = "1"

[[bench]]
name = "arrow_codec"
harness = false
