[package]
name = "rapidbyte-e2e"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
anyhow = "1"
tokio = { version = "1.36", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-postgres = "0.7"
testcontainers = "0.15"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tempfile = "3"
rusqlite = { version = "0.31", features = ["bundled"] }

rapidbyte-engine = { path = "../../crates/rapidbyte-engine" }

[dev-dependencies]
rstest = "0.21"
insta = "1"
